--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="/source/Minecraft.png" class="mouse">
                 </div>
                 <div class="contentBox">
-                    <h3>MINECRAFT JAVA y BEDROCK</h3>
+                    <h3>MINECRAFT JAVA</h3>
                     <h2 class="price">29.<small>99</small> USD</h2>
                     <a href="#" class="buy">Comprar Ahora</a>
                 </div>
